add jar file for soap, no functionality yet