@@ -15,6 +15,14 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>HegesztesMNBSoap</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/HegesztesSoapMNB-1.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
         <!-- Existing dependencies from the first POM -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -185,25 +193,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxws-maven-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>wsimport</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <wsdlUrls>
-                        <wsdlUrl>http://www.mnb.hu/arfolyamok.asmx?wsdl</wsdlUrl>
-                    </wsdlUrls>
-                    <packageName>soapmnb</packageName>
-                    <sourceDestDir>src/main/java</sourceDestDir>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
@@ -218,6 +207,8 @@
                         <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.api.message=ALL-UNNAMED</arg>
                         <arg>--add-exports</arg>
                         <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.spi=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.api.policy=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
